# CharacterSheet

./: .gitignore  CMakeLists.txt  Sergor.json  Vallius.json  notes.txt
Source/: main.cpp
